# test_awersome_django

./: .gitignore  example.env  manage.py  pyproject.toml
api/: urls.py
api/users/: serializers.py  views.py
core/apps/users/: admin.py  managers.py  models.py  tables.py
core/apps/users/migrations/: 0001_initial.py
core/project/: asgi.py  settings.py  urls.py  wsgi.py
