[tool.poetry]
name = "test_awersome_django"
version = "0.1.0"
description = ""
authors = ["Дороватовский Евгений <e.dorovatovskyi@benovate.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
